--- a/NuGet.config
+++ b/NuGet.config
@@ -4,23 +4,69 @@
   <!-- `clear` ensures no additional sources are inherited from another config file. -->
   <packageSources>
     <clear />
+    <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
+    <!--  Begin: Package sources from dotnet-android -->
+    <add key="darc-pub-dotnet-android-278e101" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-278e1016/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-android -->
+    <!--  Begin: Package sources from dotnet-aspnetcore -->
+    <add key="darc-int-dotnet-aspnetcore-af22eff" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-6" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-6/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-5" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-5/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-4" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-4/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-aspnetcore -->
+    <!--  Begin: Package sources from dotnet-emsdk -->
+    <add key="darc-pub-dotnet-emsdk-763d10a" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-6" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-6/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-5" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-5/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-4" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-4/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-3/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-2" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-2/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-1" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-1/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-emsdk -->
+    <!--  Begin: Package sources from dotnet-runtime -->
+    <add key="darc-int-dotnet-runtime-9d5a6a9" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-runtime-9d5a6a9a/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-runtime -->
+    <!--  Begin: Package sources from xamarin-xamarin-macios -->
+    <add key="darc-pub-xamarin-xamarin-macios-797d307" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-797d3072/nuget/v3/index.json" />
+    <!--  End: Package sources from xamarin-xamarin-macios -->
+    <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
     <add key="local" value="LOCAL_PLACEHOLDER" />
     <add key="nuget-only" value="NUGET_ONLY_PLACEHOLDER" />
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-public" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-public/nuget/v3/index.json" protocolVersion="3" />
     <add key="benchmark-dotnet-prerelease" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/benchmark-dotnet-prerelease/nuget/v3/index.json" />
+    <add key="dotnet8" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json" />
+    <add key="dotnet8-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8-transport/nuget/v3/index.json" />
+    <add key="dotnet9" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet9/nuget/v3/index.json" />
+    <add key="dotnet9-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet9-transport/nuget/v3/index.json" />
     <add key="skiasharp" value="https://pkgs.dev.azure.com/xamarin/public/_packaging/SkiaSharp/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-5054dd3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-5054dd35/nuget/v3/index.json" />
+    <!-- Added manually for dotnet/runtime 8.0.11 -->
+    <add key="darc-pub-dotnet-emsdk-91b783e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-91b783ed/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-runtime-ef07c4f" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-ef07c4f2/nuget/v3/index.json" />
+    <!-- Added manually for .NET 8 Android -->
+    <add key="darc-pub-dotnet-android-df9aaf2-2" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-df9aaf29-2/nuget/v3/index.json" />
+    <!-- Added manually for .NET 8 iOS -->
+    <add key="darc-pub-xamarin-xamarin-macios-8354d6d" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-8354d6d9/nuget/v3/index.json" />
     <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
     <add key="dotnet-libraries-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries-transport/nuget/v3/index.json" />
-
-    <!-- Added manually for .NET 8 MAUI -->- 
-    <add key="darc-pub-dotnet-maui-a33a875e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-maui-a33a875e/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <disabledPackageSources>
+    <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
+    <!--  Begin: Package sources from dotnet-aspnetcore -->
+    <add key="darc-int-dotnet-aspnetcore-af22eff-4" value="true" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-5" value="true" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-6" value="true" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff" value="true" />
+    <!--  End: Package sources from dotnet-aspnetcore -->
+    <!--  Begin: Package sources from dotnet-runtime -->
+    <add key="darc-int-dotnet-runtime-9d5a6a9" value="true" />
+    <!--  End: Package sources from dotnet-runtime -->
+    <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
     <add key="local" value="true" />
     <add key="nuget-only" value="true" />
   </disabledPackageSources>
