--- a/src/DotNet/DotNet.csproj
+++ b/src/DotNet/DotNet.csproj
@@ -7,9 +7,9 @@
     <InternalAzureFeed>https://dotnetbuilds.blob.core.windows.net/internal</InternalAzureFeed>
     <DotNetFeedUrl>https://dotnetcli.azureedge.net/dotnet</DotNetFeedUrl>
     <NugetArtifactsPath>$(MauiRootDirectory)/artifacts</NugetArtifactsPath>
-    <PublicSdk Condition=" '$(PublicSdk)' == ''">true</PublicSdk>
-    <PrivateSdk>true</PrivateSdk>
-    <PrivateSdk Condition=" '$(PrivateSdk)' == ''">false</PrivateSdk>
+    <PublicSdk Condition=" '$(PublicSdk)' == ''">false</PublicSdk>
+    <PrivateSdk>$(PrivateBuild)</PrivateSdk>
+    <PrivateSdk Condition=" '$(PrivateSdk)' == ''">true</PrivateSdk>
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
     <_SkipUpdateBuildNumber>true</_SkipUpdateBuildNumber>
   </PropertyGroup>
