--- a/NuGet.config
+++ b/NuGet.config
@@ -25,6 +25,8 @@
     <!-- Added manually for .NET 8 MAUI -->- 
     <add key="darc-pub-dotnet-maui-a33a875e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-maui-a33a875e/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-aspnetcore-be19faf1" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-aspnetcore-be19faf1/nuget/v3/index.json" />
+    <!-- Added manually for 8.0.12 -->
+    <add key="darc-pub-dotnet-runtime-c1ae9626" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-c1ae9626/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
